--- a/hw01.ipynb
+++ b/hw01.ipynb
@@ -14,11 +14,21 @@
     "\n",
     "# Murre JMJ, Dros J (2015) Replication and Analysis of Ebbinghaus’ Forgetting Curve. PLoS ONE 10(7): e0120644. doi:10.1371/journal. pone.0120644\n",
     "\n",
-    "# Memory Chain Model\n",
-    "# a model of forgetting and amnesia\n",
-    "# store 1 - memory is exponentially declining in intensity (e.g., in the hippocampus)\n",
-    "# store 2 - memory contents are being steadily transferred to another region for long-term retention (e.g., neocortex)\n",
-    "# in store 2, memories decline at a lower rate"
+    "# Murre and Dros used multiple studies to validate their findings. These parameter values are based on:\n",
+    "# Ebbinghaus H (1880) Urmanuskript \"Ueber das Gedächtniß\". Passau: Passavia Universitätsverlag.\n",
+    "\n",
+    "# Matthew M. Walsh, Kevin A. Gluck, Glenn Gunzelmann, Tiffany Jastrzembski, Michael Krusmark, Jay I. Myung, Mark A. Pitt & Ran Zhou. Mechanisms underlying the spacing effect in learning: A comparison of three computational models. Journal of Experimental Psychology: General 147 (9):1325-1348 (2018)\n",
+    "\n",
+    "# Walsh et al. conducted an analysis of three models of the spacing effect in learning.\n",
+    "# In this code, I reference the ACT-R model:\n",
+    "# Pavlik, P. I., & Anderson, J. R. (2005). Practice and forgetting effects on vocabulary memory: An Activation-based model of the spacing effect. Cognitive Science, 29, 559-586."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Memory Chain Model"
    ]
   },
   {
@@ -79,8 +89,6 @@
     }
    ],
    "source": [
-    "# parameter values from:\n",
-    "# Ebbinghaus H (1880) Urmanuskript \"Ueber das Gedächtniß\". Passau: Passavia Universitätsverlag.\n",
     "t = []\n",
     "myu_1 = 0.704 # initial strength of the memory traces in store 1\n",
     "a_1 = 0.000319 # decay rate in store 1\n",
@@ -120,11 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From https://faculty.psy.ohio-state.edu/myung/personal/Walsh2018JEPG-SpacingEffect.pdf:\n",
-    "\n",
-    "Matthew M. Walsh, Kevin A. Gluck, Glenn Gunzelmann, Tiffany Jastrzembski, Michael Krusmark, Jay I. Myung, Mark A. Pitt & Ran Zhou. Mechanisms underlying the spacing effect in learning: A comparison of three computational models. Journal of Experimental Psychology: General 147 (9):1325-1348 (2018)\n",
-    "\n",
-    "## ACT-R equation"
+    "### The ACT-R Activation Equation"
    ]
   },
   {
