--- a/hw01.ipynb
+++ b/hw01.ipynb
@@ -1,27 +1,53 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Neil Thawani\n",
-    "# Human Learning and How to Optimize It\n",
-    "# Model Human Learner Assignment 1\n",
-    "# Problems, Principles, & Equations for Memory & Fluency\n",
-    "# 7 February 2020\n",
+    "## Neil Thawani\n",
     "\n",
-    "# Murre JMJ, Dros J (2015) Replication and Analysis of Ebbinghaus’ Forgetting Curve. PLoS ONE 10(7): e0120644. doi:10.1371/journal. pone.0120644\n",
+    "## Human Learning and How to Optimize It\n",
     "\n",
-    "# Murre and Dros used multiple studies to validate their findings. These parameter values are based on:\n",
-    "# Ebbinghaus H (1880) Urmanuskript \"Ueber das Gedächtniß\". Passau: Passavia Universitätsverlag.\n",
+    "## Model Human Learner Assignment 1\n",
     "\n",
-    "# Matthew M. Walsh, Kevin A. Gluck, Glenn Gunzelmann, Tiffany Jastrzembski, Michael Krusmark, Jay I. Myung, Mark A. Pitt & Ran Zhou. Mechanisms underlying the spacing effect in learning: A comparison of three computational models. Journal of Experimental Psychology: General 147 (9):1325-1348 (2018)\n",
+    "## Problems, Principles, & Equations for Memory & Fluency\n",
     "\n",
-    "# Walsh et al. conducted an analysis of three models of the spacing effect in learning.\n",
-    "# In this code, I reference the ACT-R model:\n",
-    "# Pavlik, P. I., & Anderson, J. R. (2005). Practice and forgetting effects on vocabulary memory: An Activation-based model of the spacing effect. Cognitive Science, 29, 559-586."
+    "## 7 February 2020\n",
+    "\n",
+    "Murre and Dros (2015) used multiple studies to validate their findings in replicating the work on the \"forgetting curve,\" originally pioneered by Ebbinghaus. These parameter values are based on Ebbinghaus's (1880) work.\n",
+    "\n",
+    "Walsh et al. (2018) conducted an analysis of three models of the spacing effect in learning.\n",
+    "\n",
+    "In this code, I reference the ACT-R model (Pavlik and Anderson, 2005), expanding upon its result, the activation level, by applying the work done by Murre and Dros.\n",
+    "\n",
+    "### The Memory Chain Model, a model of forgetting and amnesia\n",
+    "\n",
+    "![Memory Chain Model](mcm.png)\n",
+    "\n",
+    "- *myu_1* is the initial strength of the memory traces in store 1,\n",
+    "- *a_1* is the decay rate in store 1,\n",
+    "- *myu_2* is the rate of consolidating the contents of store 1 to store 2, and\n",
+    "- *a_2* is the decay rate in store 2\n",
+    "\n",
+    "Under the conditions of this experiment, store 1 is the hippocampus, where memory exponentially declines in intensity and store 2 is the neocortex, where memory contents are steadily transferred for long-term retention and decline at a lower rate.\n",
+    "\n",
+    "I applied Murre and Dros' equation to Walsh et al.'s (2018) work investigating [ACT-R](Pavlik_Anderson_2005.pdf) and two other models of spaced memory practice and, I think, expanded the accuracy of the activation likelihood predictions made by ACT-R's simplified implementation of Ebbinghaus' classic forgetting curve.\n",
+    "\n",
+    "### ACT-R Activation Equation\n",
+    "\n",
+    "![ACT-R Activation Equation](act-r_activation.png)\n",
+    "\n",
+    "Further work could use ACT-R's models of spaced practice and retention; however, I strongly suggest investigating Walsh et al.'s claims that ACT-R is not the best means (of the three they investigated) to model accelerated relearning.\n",
+    "\n",
+    "### Sources\n",
+    "\n",
+    "Murre JMJ, Dros J. (2015). Replication and Analysis of Ebbinghaus’ Forgetting Curve. PLoS ONE 10(7): e0120644. doi:10.1371/journal. pone.0120644\n",
+    "\n",
+    "Ebbinghaus H. (1880). Urmanuskript \"Ueber das Gedächtniß\". Passau: Passavia Universitätsverlag.\n",
+    "\n",
+    "Pavlik, PI & Anderson, JR. (2005). Practice and forgetting effects on vocabulary memory: An Activation-based model of the spacing effect. Cognitive Science, 29, 559-586.\n",
+    "\n",
+    "Walsh, M.M., Gluck, K.A., Gunzelmann, G., Jastrzembski, T., Krusmark, M., Myung, J.I., Pitt, M.A., & Zhou, R. (2018). Mechanisms underlying the spacing effect in learning: A comparison of three computational models. Journal of Experimental Psychology: General, 147, (9):1325-1348."
    ]
   },
   {
@@ -29,13 +55,6 @@
    "metadata": {},
    "source": [
     "### Memory Chain Model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![Memory Chain Model](mcm.png)"
    ]
   },
   {
@@ -129,13 +148,6 @@
    "metadata": {},
    "source": [
     "### The ACT-R Activation Equation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![Act-R Activation Level](act-r_activation.png)"
    ]
   },
   {
